--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,19 @@
 <head>
         <meta charset="utf-8">
         <title>{{  name  }}'s Watchlist</title>
+        <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}">
+        <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
 </head>
 <body>
-    <h2>{{  name  }}'s Watchlist</h2>
+    <h2>
+        <img alt="Avatar" class="avater" src="{{ url_for('static',filename='images/b.png') }}">
+    </h2>
+
+    <p class="cuidang">{{ name }}</p>
+
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{  movies|length  }} Titles</p>
-    <ul>
+    <ul class="movie-list">
         {% for movie in movies %}    {# 迭代 movies 变量 #}
         <li>{{ movie.title }} - {{ movie.year }}</li>    {# 等同于
         movie['title']#}
@@ -17,6 +24,7 @@
     <footer>
         <small>&copy; 2018 <a href="http://helloflask.com/tutori
 al">HelloFlask</a></small>
+        <img alt="tank" class="tank" src="{{ url_for('static',filename='images/a.gif') }}">
     </footer>
-    </body>
-    </html>
+</body>
+</html>
