--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="utf-8">
-        <title>{{  name  }}'s Watchlist</title>
+        <title>{{  user.name  }}'s Watchlist</title>
         <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}">
         <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
 </head>
@@ -11,7 +11,7 @@
         <img alt="Avatar" class="avater" src="{{ url_for('static',filename='images/b.png') }}">
     </h2>
 
-    <p class="cuidang">{{ name }}</p>
+    <p class="cuidang">{{ user.name }}</p>
 
     {# 使用 length 过滤器获取 movies 变量的长度 #}
     <p>{{  movies|length  }} Titles</p>
