--- a/templates/404.html
+++ b/templates/404.html
@@ -1,25 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>{{ user.name }}'s Watchlist</title>
-    <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}">
-</head>
-<body>
-    <h2>
-        <img alt="'Avater" class="avater" src="{{ url_for('static',filename='images/b.png') }}">
-        {{ user.name }}
-    </h2>
-    <ul class="movie-list">
-        <li>
-            page Not Found - 404
-            <span class="float-right">
-                <a href="{{ url_for('index') }}">Go Back</a>
-            </span>
-        </li>
-    </ul>
-    <footer>
-        <small>&copy;2021 <a href= "http://helloflask.com/tutori al">HelloFlask</a></small>
-    </footer>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<ul class="movie-list">
+    <li>
+        page Not Found - 404
+        <span class="float-right">
+            <a href="{{ url_for('index') }}">Go Back</a>
+        </span>
+    </li>
+</ul>
+{% endblock %}
