--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-        <meta charset="utf-8">
-        <title>{{  user.name  }}'s Watchlist</title>
-        <link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}">
-        <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
-</head>
-<body>
-    <h2>
-        <img alt="Avatar" class="avater" src="{{ url_for('static',filename='images/b.png') }}">
-    </h2>
+{% extends 'base.html' %}
 
-    <p class="cuidang">{{ user.name }}</p>
-
-    {# 使用 length 过滤器获取 movies 变量的长度 #}
-    <p>{{  movies|length  }} Titles</p>
-    <ul class="movie-list">
-        {% for movie in movies %}    {# 迭代 movies 变量 #}
-        <li>{{ movie.title }} - {{ movie.year }}</li>    {# 等同于
-        movie['title']#}
-        {% endfor %}    {# 使用 endfor 标签结束 for 语句 #}
-    </ul>
-    <footer>
-        <small>&copy; 2018 <a href="http://helloflask.com/tutori
-al">HelloFlask</a></small>
-        <img alt="tank" class="tank" src="{{ url_for('static',filename='images/a.gif') }}">
-    </footer>
-</body>
-</html>
+{% block content %}
+<p class="cuidang">{{ user.name }}</p>
+<p>{{  movies|length  }} Titles</p>
+<ul class="movie-list">
+    {% for movie in movies %}
+    <li>{{ movie.title }} - {{ movie.year }}
+        <span class="float-right">
+            <a class="imdb" href="http://localhost:5000/find?q={{movie.title}}" target="_blank" title="Find this movie on IMDb">点击进入</a>
+        </span>
+    </li>
+    {% endfor %}
+</ul>
+<img alt="tank" class="tank" src="{{ url_for('static',filename='images/a.gif') }}" title="坦克！">
+{% endblock %}
