--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,11 @@
     {% endblock %}
 </head>
 <body>
+    {% for message in get_flashed_messages() %}
+        <div class="alert">{{ message }}</div>
+    {% endfor %}
     <h2>
         <img alt="Avatar" class="avatar" src="{{ url_for('static',filename='images/b.png') }}">
-        {{ user.name }}
     </h2>
     <nav>
         <ul>
