--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,20 @@
 
 {% block content %}
 <p class="cuidang">{{ user.name }}</p>
-<p>{{  movies|length  }} Titles</p>
+<p>{{ movies|length }} Titles</p>
+<form method="post">
+    Name <input type="text" name="title" autocomplete="off" required>
+    Year <input type="text" name="year" autocomplete="off" required>
+    <input class="btn" type="submit" name="submit" value="Add">
+</form>
 <ul class="movie-list">
     {% for movie in movies %}
     <li>{{ movie.title }} - {{ movie.year }}
         <span class="float-right">
+            <a class="btn" href="{{ url_for('edit',movie_id=movie.id) }}">Edit</a>
+            <form class="inline-form" method="post" action="{{ url_for('delete',movie_id=movie.id) }}">
+                <input class="btn" type="submit" name="delete" value="Delete" onclick="return confirm('Are you sure?')">
+            </form>
             <a class="imdb" href="http://localhost:5000/{{movie.year}}" target="_blank" title="Find this movie on IMDb">点击进入</a>
         </span>
     </li>
